--- a/RIotApi.ipynb
+++ b/RIotApi.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "from riotwatcher import LolWatcher\r\n",
     "import pandas as pd\r\n",
-    "lol_watcher = LolWatcher('RGAPI-bc0cecc2-cd1e-4374-ae6a-2af9033ce2ed')"
+    "lol_watcher = LolWatcher('your api key here')"
    ],
    "outputs": [],
    "metadata": {}
